# stonesngems_cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/rnd/: stonesngems.h
src/: definitions.h  png_to_byte.py  stonesngems_base.cpp  stonesngems_base.h  util.cpp  util.h
test/: CMakeLists.txt  test.cpp  test_default.cpp  test_find_indices.cpp  test_serialization.cpp  test_speed.cpp  test_throughput.cpp
